--- a/src/components/form/form.module.css
+++ b/src/components/form/form.module.css
@@ -1,5 +1,6 @@
 .form{
     margin-left: 40px;
+    height: 100%;
 }
 .formBtn{
     margin-left: 10px;
@@ -13,7 +14,7 @@
 }
 .formBtn:hover{
     background-color: white;
-    border-color: black;
+    border-color: gray;
     color: orange;
 }
 .formInput{
