--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,9 @@ li,a {
   text-decoration: none;
 }
 h1{
-  color: rgb(10, 10, 102);
-  margin-left: 40px;
+  color: rgb(0, 0, 0);
+  margin: 0 40px;
+  }
+  section{
+    background-color: rgb(239, 240, 241);
   }
